// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MarkdownPage /> with \`paragraphModifier\` props matches with snapshot 1`] = `
<div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h1
      className="sc-AxjAm olwwK"
      id="h1"
    >
      H1
    </h1>
  </div>
  <div
    className="sc-AxiKw kFolyb"
  >
    <div
      className="sc-AxirZ wSPT k-HorizontalStroke k-HorizontalStroke--size--big"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h2
      className="sc-AxjAm kWOWDl"
      id="h2"
    >
      H2
    </h2>
  </div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h3
      className="sc-AxjAm dTYukb"
      id="h3"
    >
      H3
    </h3>
  </div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h1
      className="sc-AxjAm olwwK"
      id="emphasis"
    >
      Emphasis
    </h1>
  </div>
  <div
    className="sc-AxiKw kFolyb"
  >
    <div
      className="sc-AxirZ wSPT k-HorizontalStroke k-HorizontalStroke--size--big"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-AxiKw dEURrP"
  >
    <p
      className="k-Paragraph k-Paragraph--primary k-Paragraph--withoutMargin"
    >
      Emphasis, aka italics, with 
      <em>
        asterisks
      </em>
       or 
      <em>
        underscores
      </em>
      .
Strong emphasis, aka bold, with 
      <strong>
        asterisks
      </strong>
       or 
      <strong>
        underscores
      </strong>
      .
Combined emphasis with 
      <strong>
        asterisks and 
        <em>
          underscores
        </em>
      </strong>
      .
Strikethrough uses two tildes. ~~Scratch this.~~
    </p>
  </div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h1
      className="sc-AxjAm olwwK"
      id="list"
    >
      List
    </h1>
  </div>
  <div
    className="sc-AxiKw kFolyb"
  >
    <div
      className="sc-AxirZ wSPT k-HorizontalStroke k-HorizontalStroke--size--big"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-AxiKw haLuOa"
  >
    <ul
      className="sc-AxhCb hFrpQV sc-AxgMl gFkhME"
    >
      <li
        className="sc-AxhUy irmRRN"
      >
        Unordered list can use asterisks
      </li>
    </ul>
  </div>
  <div
    className="sc-AxiKw haLuOa"
  >
    <ul
      className="sc-AxhCb hFrpQV sc-AxgMl gFkhME"
    >
      <li
        className="sc-AxhUy irmRRN"
      >
        Or minuses
      </li>
    </ul>
  </div>
  <div
    className="sc-AxiKw haLuOa"
  >
    <ul
      className="sc-AxhCb hFrpQV sc-AxgMl gFkhME"
    >
      <li
        className="sc-AxhUy irmRRN"
      >
        Or pluses
      </li>
    </ul>
  </div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h1
      className="sc-AxjAm olwwK"
      id="link"
    >
      Link
    </h1>
  </div>
  <div
    className="sc-AxiKw kFolyb"
  >
    <div
      className="sc-AxirZ wSPT k-HorizontalStroke k-HorizontalStroke--size--big"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-AxiKw dEURrP"
  >
    <p
      className="k-Paragraph k-Paragraph--primary k-Paragraph--withoutMargin"
    >
      <a
        className="k-Paragraph__link"
        href="https://www.google.com"
      >
        I'm an inline-style link
      </a>
    </p>
  </div>
</div>
`;

exports[`<MarkdownPage /> with children matches with snapshot 1`] = `
<div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h1
      className="sc-AxjAm olwwK"
      id="h1"
    >
      H1
    </h1>
  </div>
  <div
    className="sc-AxiKw kFolyb"
  >
    <div
      className="sc-AxirZ wSPT k-HorizontalStroke k-HorizontalStroke--size--big"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h2
      className="sc-AxjAm kWOWDl"
      id="h2"
    >
      H2
    </h2>
  </div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h3
      className="sc-AxjAm dTYukb"
      id="h3"
    >
      H3
    </h3>
  </div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h1
      className="sc-AxjAm olwwK"
      id="emphasis"
    >
      Emphasis
    </h1>
  </div>
  <div
    className="sc-AxiKw kFolyb"
  >
    <div
      className="sc-AxirZ wSPT k-HorizontalStroke k-HorizontalStroke--size--big"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-AxiKw dEURrP"
  >
    <p
      className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
    >
      Emphasis, aka italics, with 
      <em>
        asterisks
      </em>
       or 
      <em>
        underscores
      </em>
      .
Strong emphasis, aka bold, with 
      <strong>
        asterisks
      </strong>
       or 
      <strong>
        underscores
      </strong>
      .
Combined emphasis with 
      <strong>
        asterisks and 
        <em>
          underscores
        </em>
      </strong>
      .
Strikethrough uses two tildes. ~~Scratch this.~~
    </p>
  </div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h1
      className="sc-AxjAm olwwK"
      id="list"
    >
      List
    </h1>
  </div>
  <div
    className="sc-AxiKw kFolyb"
  >
    <div
      className="sc-AxirZ wSPT k-HorizontalStroke k-HorizontalStroke--size--big"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-AxiKw haLuOa"
  >
    <ul
      className="sc-AxhCb hFrpQV sc-AxgMl gFkhME"
    >
      <li
        className="sc-AxhUy fguYj"
      >
        Unordered list can use asterisks
      </li>
    </ul>
  </div>
  <div
    className="sc-AxiKw haLuOa"
  >
    <ul
      className="sc-AxhCb hFrpQV sc-AxgMl gFkhME"
    >
      <li
        className="sc-AxhUy fguYj"
      >
        Or minuses
      </li>
    </ul>
  </div>
  <div
    className="sc-AxiKw haLuOa"
  >
    <ul
      className="sc-AxhCb hFrpQV sc-AxgMl gFkhME"
    >
      <li
        className="sc-AxhUy fguYj"
      >
        Or pluses
      </li>
    </ul>
  </div>
  <div
    className="sc-AxiKw XHDnF"
  >
    <h1
      className="sc-AxjAm olwwK"
      id="link"
    >
      Link
    </h1>
  </div>
  <div
    className="sc-AxiKw kFolyb"
  >
    <div
      className="sc-AxirZ wSPT k-HorizontalStroke k-HorizontalStroke--size--big"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-AxiKw dEURrP"
  >
    <p
      className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
    >
      <a
        className="k-Paragraph__link"
        href="https://www.google.com"
      >
        I'm an inline-style link
      </a>
    </p>
  </div>
</div>
`;
